--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "classnames": "^2.3.2",
-    "framer-motion": "^10.12.7",
+    "framer-motion": "^10.12.16",
     "next": "13.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0"
   }
 }
