--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@fontsource-variable/manrope": "^5.0.3",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.16",
     "next": "13.3.4",
